# labs

./: .gitignore  CMakeLists.txt  README.md  sonar-project.properties  test.c
.github/workflows/: build.yml
include/: arrays.h  io.h  sorts.h
lab1/: task2.c  task3.c  task4.c
lab2/: task1.c  task2.c  task3.c
lab3/: task1.c  task2.c  task3.c
lab4/: task1.c  task2.c  task3.c
lab5/: arrays.h  task1.c  task2.c  task3.c
lab6/: task1.c  task2.c
src/lab-lib/: CMakeLists.txt
src/lab-lib/include/: arrays.h  input.h  sorts.h  strings.h
src/lab-lib/src/: arrays.c  input.c  sorts.c  strings.c
src/lab1/: task1.c
src/lab3/: task3.c
src/lab4/: task2.c
src/lab5/: task1.c  task2.c  task3.c
src/lab6/: task1.c  task2.c
src/lab7/: main.c
src/lab8/: main.c
